--- a/app/src/main/res/layout/edit_image_export_dialog.xml
+++ b/app/src/main/res/layout/edit_image_export_dialog.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_bg"
+    android:background="@color/color_bg"
     android:orientation="vertical"
     android:paddingBottom="8dp"
     android:paddingTop="8dp"
