--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--ExifEditor Theme-->
-    <style name="CameraRoll.Theme.Light.ExifEditor" parent="CameraRoll.Theme.Light">
+    <style name="CameraRoll.Theme.Light.ExifEditor" parent="CameraRoll.Theme">
         <item name="android:windowBackground">@null</item>
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowLightNavigationBar">true</item>
