--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Theme preference-->
-    <string name="DARK_THEME_VALUE" translatable="false">DARK</string>
-    <string name="LIGHT_THEME_VALUE" translatable="false">LIGHT</string>
-    <string name="BLACK_THEME_VALUE" translatable="false">BLACK</string>
+    <string name="DARK_THEME_VALUE" translatable="false">D</string>
+    <string name="LIGHT_THEME_VALUE" translatable="false">L</string>
+    <string name="FOLLOW_SYSTEM_VALUE" translatable="false">S</string>
 
     <string name="DARK_THEME_NAME" translatable="false">Dark</string>
     <string name="LIGHT_THEME_NAME" translatable="false">Light</string>
-    <string name="BLACK_THEME_NAME" translatable="false">Black</string>
+    <string name="FOLLOW_SYSTEM_NAME" translatable="false">Follow System</string>
 
     <string-array name="theme_values">
         <item>@string/DARK_THEME_VALUE</item>
         <item>@string/LIGHT_THEME_VALUE</item>
-        <item>@string/BLACK_THEME_VALUE</item>
+        <item>@string/FOLLOW_SYSTEM_VALUE</item>
     </string-array>
     <string-array name="theme_names">
         <item>@string/DARK_THEME_NAME</item>
         <item>@string/LIGHT_THEME_NAME</item>
-        <item>@string/BLACK_THEME_NAME</item>
+        <item>@string/FOLLOW_SYSTEM_NAME</item>
     </string-array>
 
     <!--Style preference-->
