Initial MD3 and native night mode support added

--- a/app/src/main/res/layout-v21/recycler_view_layout.xml
+++ b/app/src/main/res/layout-v21/recycler_view_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,10 +19,21 @@
         android:layout_height="match_parent"
         android:layout_gravity="end" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stateListAnimator="@animator/toolbar_raise"
-        android:transitionName="@string/toolbar_transition_name" />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:stateListAnimator="@animator/toolbar_raise"
+            app:title="@string/app_name"
+            app:titleTextColor="@color/textColorPrimary"
+            app:menu="@menu/main"
+            android:transitionName="@string/toolbar_transition_name"/>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
 </FrameLayout>
