--- a/app/src/main/res/layout/recycler_view_layout.xml
+++ b/app/src/main/res/layout/recycler_view_layout.xml
@@ -18,8 +18,14 @@
         android:layout_height="match_parent"
         android:layout_gravity="end" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
 </FrameLayout>
