--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!--Tag for a view, which need a bg color set, according to the current theme-->
     <string name="theme_bg_color" translatable="false">THEME_BG_COLOR</string>
     <string name="theme_text_color_primary" translatable="false">THEME_TEXT_COLOR_PRIMARY</string>
@@ -9,8 +9,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
-
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 
     <!--translucent Activity Base Theme-->
